Add task list items

--- a/src/app/pages/task-view/task-view.component.html
+++ b/src/app/pages/task-view/task-view.component.html
@@ -6,7 +6,7 @@
             </h1>
 
             <div class="list-menu">
-                <a href="#" class="list-menu-item">
+                <a href="#" class="list-menu-item is-active">
                     <p>List 1</p>
                 </a>
                 <a href="#" class="list-menu-item">
@@ -17,12 +17,25 @@
                 </a>
             </div>
 
+            <button class="button is-primary">+ New List</button>
+
         </div>
 
         <div class="task-list-container has-background-light">
             <h1 class="title has-text-primary">
                 Tasks
             </h1>
+
+            <!-- TASK ELEMENTS -->
+            <div class="task complete">
+                <p>This is something I have to do</p>
+            </div>
+            <div class="task">
+                <p>This is something I have to do</p>
+            </div>
+            <div class="task">
+                <p>This is something I have to do</p>
+            </div>
         </div>
     </div>
 </div>
