--- a/src/app/pages/task-view/task-view.component.scss
+++ b/src/app/pages/task-view/task-view.component.scss
@@ -41,7 +41,11 @@
       &:hover {
         background: $light;
       }
-      
+
+      &.is-active {
+        background: #cff8ef;
+        color: $dark-green;
+      }
     }
   }
 }
@@ -51,6 +55,32 @@
   flex-grow: 1;
   border-radius: 0 8px 8px 0;
   padding: 42px;
+  flex-direction: column;
+
+  .task {
+    background: #fbfbfb;
+    padding: 15px 20px;
+    border-radius: 5px;
+    margin-top: 10px;
+
+    &:not(.complete) {
+      transition: 0.2s ease;
+      cursor: pointer;
+
+      &:active {
+        transform: scale(0.9);
+      }
+
+      &:hover {
+        box-shadow: 0 0 0 5px #eee;
+      }
+    }
+
+    &.complete {
+      text-decoration: line-through;
+      opacity: 0.7;
+    }
+  }
 }
 
 .title {
