--- a/src/main-styles.scss
+++ b/src/main-styles.scss
@@ -28,3 +28,11 @@ html,
 body {
   height: 100%;
 }
+
+.centered-content {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+}
