--- a/src/app/pages/task-view/task-view.component.html
+++ b/src/app/pages/task-view/task-view.component.html
@@ -25,6 +25,10 @@
             <div *ngFor="let task of tasks" class="task complete">
                 <p>{{task.title}}</p>
             </div>
+
+            <button class="circle-add-button button is-primary">
+                <img src="/assets/plus-icon.svg">
+            </button>
         </div>
     </div>
 </div>
