--- a/src/app/pages/new-list/new-list.component.html
+++ b/src/app/pages/new-list/new-list.component.html
@@ -1,17 +1,22 @@
 <div class="centered-content">
-    <div class="modal-box">
-        <h1 class="title">Create New List</h1>
+  <div class="modal-box">
+    <h1 class="title">Create New List</h1>
 
+    <input
+      #listTitleInput
+      class="input has-background-light"
+      type="text"
+      placeholder="Enter list title"
+    />
 
-        <input #listTitleInput class="input has-background-light " type="text" placeholder="Enter list title">
-
-
-        <div class="buttons is-right" style="margin-top: 20px;">
-            <button routerLink="/" class="button is-medium">Cancel</button>
-            <button class="button is-primary is-medium" (click)="createNewList(listTitleInput.value)">Create</button>
-        </div>
-
-
-
+    <div class="buttons is-right" style="margin-top: 20px">
+      <button routerLink="/" class="button is-medium">Cancel</button>
+      <button
+        class="button is-primary is-medium"
+        (click)="createNewList(listTitleInput.value)"
+      >
+        Create
+      </button>
     </div>
+  </div>
 </div>
