--- a/src/main-styles.scss
+++ b/src/main-styles.scss
@@ -36,3 +36,10 @@ body {
   width: 100%;
   height: 100%;
 }
+
+.title {
+  font-family: "Lato";
+  font-size: 28px;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+}
