--- a/src/app/pages/task-view/task-view.component.scss
+++ b/src/app/pages/task-view/task-view.component.scss
@@ -55,6 +55,7 @@
     padding: 15px 20px;
     border-radius: 5px;
     margin-top: 10px;
+    user-select: none;
 
     &:not(.complete) {
       transition: 0.2s ease;
@@ -76,7 +77,6 @@
   }
 }
 
-
 .circle-add-button {
   height: 50px;
   width: 50px;
@@ -85,4 +85,10 @@
   right: 25px;
   border-radius: 100%;
   color: #fff;
+}
+
+.empty-state {
+  font-size: 20px;
+  color: #777;
+  text-align: center;
 }
