Add conditional rendering to task heading

--- a/src/app/pages/task-view/task-view.component.html
+++ b/src/app/pages/task-view/task-view.component.html
@@ -17,7 +17,7 @@
         </div>
 
         <div class="task-list-container has-background-light">
-            <h1 class="title has-text-primary">
+            <h1 *ngIf="id" class="title has-text-primary">
                 Tasks
             </h1>
 
