Add style class

--- a/src/main-styles.scss
+++ b/src/main-styles.scss
@@ -43,3 +43,9 @@ body {
   text-transform: uppercase;
   letter-spacing: 2px;
 }
+
+.white-box {
+  padding: 35px;
+  background: #fff;
+  border-radius: 5px;
+}
