--- a/src/app/pages/login-page/login-page.component.html
+++ b/src/app/pages/login-page/login-page.component.html
@@ -1,5 +1,5 @@
 <div class="centered-content">
-    <div class="login-box">
+    <div class="white-box">
         <h1 class="title has-text-primary">Login</h1>
 
         <div class="field">
@@ -20,7 +20,8 @@
         </div>
         <div class="field">
             <p class="control">
-                <button (click)="onLoginClick(emailInput.value, passwordInput.value)" class="button is-success is-pulled-right">
+                <button (click)="onLoginClick(emailInput.value, passwordInput.value)"
+                    class="button is-success is-pulled-right">
                     Login
                 </button>
             </p>
